samples/_failures_safe/1761197028_f25b08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65731280.c: In function ‘main’:
./samples/SAFE/__tmp_65731280.c:154:5: error: expected expression at end of input
  154 |     if (len > 0 && processor.input_text[len -
      |     ^~
./samples/SAFE/__tmp_65731280.c:154:5: error: expected declaration or statement at end of input
